# Apiary

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: AnnotationParser.cpp.269CB6D2CA885A81.idx  AnnotationParser.hpp.AA8267A0BF5B5D06.idx  DocComment.cpp.971F601E328EC493.idx  DocComment.hpp.12461737AD9E70E8.idx  DocExtractor.cpp.30029A44AFD88864.idx  DocExtractor.hpp.ED42068AAA965789.idx  DocsJson.cpp.3252CE24D8B17D4D.idx  DocsJson.hpp.374452D686C1E78B.idx  Emitter.cpp.B2142305DE09B6EC.idx  Emitter.hpp.33F8D5637CC7505E.idx  IR.cpp.E6B90B15ACFEAB96.idx  IR.hpp.2B9E62C5CC7A9784.idx  InstantiateParser.cpp.339588DAF19BDC1F.idx  InstantiateParser.hpp.924FCD48E181D9B2.idx  MacroScanner.cpp.DD69CC099408CF0C.idx  MacroScanner.hpp.CB836046A093DB70.idx  Properties.cpp.A1046147D51C1C76.idx  Properties.hpp.A76754B97CC72FF4.idx  PyiEmitter.cpp.16E39F1F7C34FD98.idx  PyiEmitter.hpp.D7F1CF7431850753.idx  PythonOverloads.cpp.459781FA50A7619A.idx  PythonOverloads.hpp.DF0A092BDEE8465C.idx  TypeTranslator.cpp.7277C3195DD47125.idx  TypeTranslator.hpp.5EE6CC94D623466D.idx  Visitor.cpp.5F0C3FB5468DF550.idx  Visitor.hpp.63D5C7E505A6EC98.idx  main.cpp.68966AC952E3F9A6.idx
.einsums-studio/: cmake_profiles.json  launch.json
.github/workflows/: ci.yml  pages.yml
cmake/: ApiaryConfig.cmake.in  ApiaryHelpers.cmake  ApiaryRun.cmake
conda/: README.md  meta.yaml  recipe.yaml
docs/: conf.py  docs_json_schema.md  examples.rst  extract_cmake_docs.py  gen_self_docs.py  index.rst
examples/: README.md
examples/greeter/: CMakeLists.txt  README.md  test_greeter.py
examples/greeter/include/greeter/: Greeter.hpp
examples/greeter/src/: module.cpp
examples/mathx/: CMakeLists.txt  README.md  test_mathx.py
examples/mathx/content/: getting-started.md  mathx.Vec2.md  mathx.extras.md  mathx.md
examples/mathx/include/mathx/: Vec.hpp
examples/mathx/python/mathx/: __init__.py  extras.py
examples/mathx/src/: module.cpp
include/apiary/: Annotations.hpp
scripts/: aggregate_stubs.py  apiary_aggregate_stubs.py  apiary_curation.py  apiary_doc_lint.py  apiary_docs.py  apiary_docs_resolve.py  apiary_docs_schema.py  apiary_gen_cpp_docs.py  apiary_merge_docs_json.py  apiary_py_extract.py  apiary_render_cpp_rst.py  apiary_render_docs_rst.py  doc_lint.py  gen_cpp_docs.py  render_cpp_rst.py  render_docs_rst.py
src/: AnnotationParser.cpp  AnnotationParser.hpp  DocComment.cpp  DocComment.hpp  DocExtractor.cpp  DocExtractor.hpp  DocsJson.cpp  DocsJson.hpp  Emitter.cpp  Emitter.hpp  IR.cpp  IR.hpp  InstantiateParser.cpp  InstantiateParser.hpp  MacroScanner.cpp  MacroScanner.hpp  Properties.cpp  Properties.hpp  PyiEmitter.cpp  PyiEmitter.hpp  PythonOverloads.cpp  PythonOverloads.hpp  TypeTranslator.cpp  TypeTranslator.hpp  Visitor.cpp  Visitor.hpp  main.cpp
tests/: run_doc_lint.sh  run_example_mathx.sh  run_examples.sh  run_golden.sh  run_py_extract.sh  run_pyi_golden.sh  run_shard.sh  run_smoke.sh  run_sphinx_check.sh
tests/fixtures/: doc_lint_drift.json  dtype_dispatcher.hpp  enum_nttp.hpp  enums.hpp  free_functions.hpp  inheritance.hpp  linalg_cpp_fragment.docs.json  member_template.hpp  namespace_module.hpp  simple_class.hpp  templated_class.hpp  templated_function_bools.hpp
tests/fixtures/pypkg/einsums/: __init__.py  linalg.py
tests/fixtures/pypkg_content/: einsums.linalg.Decomposition.md  einsums.linalg.md  getting-started.md
tests/golden/: doc_lint_drift.txt.golden  dtype_dispatcher.cpp.golden  dtype_dispatcher.pyi.golden  enum_nttp.cpp.golden  enum_nttp.pyi.golden  enums.cpp.golden  enums.pyi.golden  free_functions.cpp.golden  free_functions.pyi.golden  member_template.cpp.golden  member_template.pyi.golden  namespace_module.cpp.golden  namespace_module.pyi.golden  simple_class.cpp.golden  simple_class.pyi.golden  templated_class.cpp.golden  templated_class.pyi.golden  templated_function_bools.cpp.golden  templated_function_bools.pyi.golden
